<resources>
    <string name="app_name">校园健康</string>
    <string name="app_description">校园健康--毕业设计</string>
    <string name="back">返回</string>
    <string name="clear">清空</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="send">发送</string>
    <string name="notice">通知</string>
    <string name="empty_data">空数据</string>
    <string name="cancel">取消</string>
    <string name="search_no_result">查询无结果</string>
    <string name="introduction">简介</string>
    <string name="detailed">[详细]</string>
    <string name="data_lose">数据丢失</string>
    <string name="input_key_word">请输入关键字</string>
    <string name="input_no_empty">输入不为空</string>
    <string name="data_finish">数据到底</string>
    <string name="database_empty_data">数据库不含该数据</string>
    <string name="type">类型</string>
    <string name="next">下一步</string>
    <string name="hasnt">无</string>
    <string name="has">有</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>
    <string name="submit">提交</string>
    <string name="delete">删除</string>
    <string name="operation">操作</string>
    <string name="sure">确定</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="replay">继续</string>
    <string name="vedio_lose">视频资源丢失</string>
    <string name="tab_homepage">首页</string>
    <string name="tab_message">消息</string>
    <string name="tab_find">发现</string>
    <string name="tab_mine">我的</string>
    <string name="tab_behavior">com.example.HealthyCampus.common.widgets.tab.TabBehavior</string>
    <string name="tab_about">关于</string>
    <string name="health_item_today">今日最新</string>
    <string name="main_exit_app">再按一次退出</string>
    <string name="menu_browser">在浏览器打开</string>
    <string name="menu_share">分享</string>
    <string name="tips_select_browser">请选择浏览器</string>
    <string name="tips_share_success">分享成功</string>
    <string name="loading_footer_tips">正在加载中……</string>
    <string name="loading_header_tips">查看更多消息</string>
    <string name="loading_success">加载成功</string>
    <string name="loading_finish">这是底部《^ --- ^》</string>
    <string name="loading_classify">正在分析中……</string>
    <string name="loading_sumbit">正在提交中……</string>
    <string name="network_request">网络请求中</string>
    <string name="network_try_again">网络异常，点击重试</string>
    <string name="network_load_try_again">加载异常，点击重试</string>
    <string name="no_network">网络不可用，请检查您的网络</string>
    <string name="netwotk_loginig">正在登录</string>
    <string name="netwotk_registering">正在注册</string>
    <string name="user_login">登录</string>
    <string name="user_login_account_number">请输入账号或者手机号</string>
    <string name="user_login_password">请输入密码</string>
    <string name="user_login_forget_password">忘记密码</string>
    <string name="user_login_registration">用户注册</string>
    <string name="user_login_agreement1">登录即代表阅读并同意</string>
    <string name="user_login_agreement2">服务协议</string>
    <string name="user_login_success">登录成功</string>
    <string name="user_login_fail">登录失败</string>
    <string name="register1_phone">请输入电话号码</string>
    <string name="register1_picture_code">请输入图片验证码</string>
    <string name="register1_short_message">请输入短信验证码</string>
    <string name="register1_get_code">获取验证码</string>
    <string name="register1_premise">注册即代表阅读并同意</string>
    <string name="register1_service">服务协议</string>
    <string name="register1_and">和</string>
    <string name="register1_private">隐私政策</string>
    <string name="register1_next">下一步</string>
    <string name="register1_phone_not_empty">手机号码不能为空</string>
    <string name="register1_code_not_empty">验证码不能为空</string>
    <string name="register1_again_send">重新发送</string>
    <string name="register1_sms_verification_success">短信验证成功</string>
    <string name="register1_code_already_sent">验证码已经发送</string>
    <string name="register1_picture_code_error">图片验证码错误</string>
    <string name="register1_alread_register">该手机已注册</string>
    <string name="register2_prompt">您的当前手机号为</string>
    <string name="register2_phone">*** **** ****</string>
    <string name="register2_set_pwd">请设置密码</string>
    <string name="register2_input_pwd">请输入密码</string>
    <string name="register2_hint_pwd">密码需含字母和数字的8-15位字符</string>
    <string name="register2_recheck_hint_pwd">确认密码</string>
    <string name="register2_Invitation_code">请输入邀请码（非必填）</string>
    <string name="register2_logon">注册</string>
    <string name="register2_password_not_in_Standard">密码不符合规范</string>
    <string name="register2_password_not_in_matching">确认密码不一致</string>
    <string name="register2_invalid_parameter">无效参数</string>
    <string name="register2_try_again">服务器开了小差, 请稍后再试</string>
    <string name="register2_register_success">恭喜您，注册成功!!!</string>
    <string name="message_item_username">用户名</string>
    <string name="message_item_last_message">最新消息</string>
    <string name="message_item_last_time">**:**</string>
    <string name="message_title">消息</string>
    <string name="message_initiate_chat">发起聊天</string>
    <string name="message_mail_list">通讯录</string>
    <string name="message_new_friend">新朋友</string>
    <string name="message_ground_chat">群聊</string>
    <string name="message_notice">通知</string>
    <string name="message_no_chat">暂时没有新消息</string>
    <string name="message_address_list">通讯录</string>
    <string name="message_address_list_catalog">A</string>
    <string name="message_address_no_friend">你还没有任何好友</string>
    <string name="message_address_add_friend">快去添加好友吧，和朋友一起分享精彩</string>
    <string name="docotor_display_doctor_name">友医生</string>
    <string name="docotor_display_doctor_comment">专业认真  和蔼细心</string>
    <string name="docotor_display_school_clinic">健康咨询</string>
    <string name="docotor_display_clinic_slogan">追求健康从我做起</string>
    <string name="docotor_display_self_diagnosis">自助诊断</string>
    <string name="docotor_display_diagnosis_slogan">自测就医 快速解决</string>
    <string name="health_consult_doctor">咨询医生</string>
    <string name="health_consult_picture_interrogation">图片问诊</string>
    <string name="health_consult_picture_interrogation_intro">图文询问，解决你的小疑惑</string>
    <string name="health_consult_emergency_call">电话急诊</string>
    <string name="health_consult_emergency_call_intro">一对一电话咨询，实时解答</string>
    <string name="health_consult_ask_doctor">问医生</string>
    <string name="health_consult_ask_doctor_intro">匿名聊天，保护你的隐私</string>
    <string name="health_consult_ask_doctor_nickname">昵称</string>
    <string name="health_consult_picture_hint_describe">请描述你的性别、年龄、症状、就诊经历</string>
    <string name="health_consult_picture_selec">图片/视频</string>
    <string name="health_consult_picture_private">上传的内容仅对医生可见</string>
    <string name="health_consult_picture_apply_prescription">免费申请处方</string>
    <string name="health_consult_picture_history">允许查看及时记录</string>
    <string name="health_consult_picture_prescription">麻烦医生根据我的情况,提供用药建议</string>
    <string name="health_consult_picture_describe">请至少使用10个字以上的内容来描述症状</string>
    <string name="health_consult_picture_add_infor">添加个人信息</string>
    <string name="health_consult_picture_information_select">请选择患者信息</string>
    <string name="health_consult_picture_information_select_hint">以便医生给出更准确的治疗，信息仅医生可见</string>
    <string name="health_consult_picture_information_add_patient">添加个人信息</string>
    <string name="health_consult_picture_information">个人信息</string>
    <string name="health_consult_picture_information_name">姓名</string>
    <string name="health_consult_picture_information_id">身份证号</string>
    <string name="health_consult_picture_information_sex">性别</string>
    <string name="health_consult_picture_information_birthday">出生日期</string>
    <string name="health_consult_picture_information_weight">体重（kg）</string>
    <string name="health_consult_picture_information_allergy">过敏史</string>
    <string name="health_consult_picture_information_medical_history">过往病史</string>
    <string name="health_consult_picture_information_liver">肝功能</string>
    <string name="health_consult_picture_information_renal">肾功能</string>
    <string name="health_consult_picture_information_hint_name">请填写真实姓名</string>
    <string name="health_consult_picture_information_hint_id">请填写身份证号</string>
    <string name="health_consult_picture_information_hint_man">男</string>
    <string name="health_consult_picture_information_hint_woman">女</string>
    <string name="health_consult_picture_information_hint_birthday">请选择出生日期</string>
    <string name="health_consult_picture_information_hint_weight">请输入体重</string>
    <string name="health_consult_picture_information_hint_allergy">请填写过敏药物（非常重要）</string>
    <string name="health_consult_picture_information_hint_history">请填写过往病史</string>
    <string name="health_consult_picture_information_tip_name">请填写姓名</string>
    <string name="health_consult_picture_information_tip_birthday">请选择出生年月</string>
    <string name="health_consult_picture_information_tip_weight">请填写体重</string>
    <string name="health_consult_phone_tips">
        拨打必读\n
        1.工作时间:8:00–12:00&#160;&#160;&#160;13:00–21:30\n
         &#160;&#160;(如遇到紧急情况,请拨打120)\n
        2.未接通或者通过失败,请稍后再拨.如通话意外中断、医生会再次拨打您的电话.\n
        3.请提供相关检查资料,便于医生准确判断.\n
        4.医务室老师的回复仅为建议,重大疾病或紧急情况请及时前往医院就诊.\n
    </string>
    <string name="health_consult_phone_call">拨打电话</string>
    <string name="user_information_signature">签名:说点什么吧～</string>
    <string name="user_information_add_friend">加好友</string>
    <string name="user_information_send_message">发消息</string>
    <string name="user_new_friend_notice">好友通知</string>
    <string name="user_new_friend_more">查看更多</string>
    <string name="user_new_friend_recommend">好友推荐</string>
    <string name="user_new_friend_add_more">添加更多朋友</string>
    <string name="user_new_friend">新的好友</string>
    <string name="user_new_friend_add">添加</string>
    <string name="user_new_friend_refuse">拒绝了你的好友申请</string>
    <string name="user_add_friend_search_people">搜联系人</string>
    <string name="user_add_friend_search">搜索</string>
    <string name="user_add_friend_search_history">搜索历史</string>
    <string name="user_add_friend_clear_history">清空搜索记录</string>
    <string name="user_add_friend_add_friend">加好友</string>
    <string name="user_add_friend_no_result">没有查到相关结果</string>
    <string name="user_add_friend_already_send">已发送验证消息</string>
    <string name="user_add_friend_add_msg_add_friend">添加好友</string>
    <string name="user_add_friend_add_msg_send_success">发送成功</string>
    <string name="user_add_friend_add_msg_send_fail">发送失败</string>
    <string name="user_new_friend_apply_additional_message">附加消息</string>
    <string name="user_new_friend_apply">好友申请</string>
    <string name="user_new_friend_apply_already_agree">已同意该申请</string>
    <string name="user_new_friend_apply_already_refuse">已拒绝该申请</string>
    <string name="user_new_friend_apply_alrea_refuse">已拒绝</string>
    <string name="user_new_friend_apply_other_refuse">对方拒绝了你的好友申请</string>
    <string name="message_chatting_press_send_voice">按住发送语音</string>
    <string name="message_chatting_recommended_friend">推荐好友</string>
    <string name="message_chatting_map_detail">查看详情</string>
    <string name="message_chatting_map_here">到这去</string>
    <string name="message_chatting_map_position">位置</string>
    <string name="chatting_select_people">选择联系人</string>
    <string name="message_notice_no_data">暂无通知</string>
    <string name="find_drug_bank">药品库</string>
    <string name="find_disease_bank">疾病库</string>
    <string name="find_health_recipes">健康食谱</string>
    <string name="find_nearby_hospital_or_pharmacy">附近(医院/药店)</string>
    <string name="find_self_help_diagnosis">自助诊断</string>
    <string name="find_self_help_hralth_news">健康资讯</string>
    <string name="mine_coupon">我的优惠券</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_integral">我的积分</string>
    <string name="mine_service">校园服务</string>
    <string name="mine_case">电子病历</string>
    <string name="mine_physique">体质测试</string>
</resources>